I add a heading to the game which is GUESS MY NUMBER GAME in the html file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <section class="section">
     <article class="back section-center">
       <div id="game" class="game">
-        <h1>guess my game</h1>
+        <h1>guess my number game</h1>
         <h2>
           STAGE <br />
           <span class="stage">1</span>
@@ -23,7 +23,7 @@
         </form>
         <div class="digits">
           <h4>Correct Number: <span class="valuenumber"></span></h4>
-          <h4>Point: <span class="point">0</span></h4>
+          <h4>Points: <span class="point">0</span></h4>
         </div>
       </div>
     </article>
